--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/HENRYKC24/my-portfolio/issues"
   },
-  "homepage": "https://github.com/HENRYKC24/my-portfolio#readme"
+  "homepage": "https://github.com/HENRYKC24/my-portfolio#readme",
+  "devDependencies": {
+    "hint": "^6.1.4",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.19.0"
+  }
 }
